Revert "Issue 6 teste 06"

--- a/force-app/main/default/layouts/Account-Account %28Sales%29 Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Account-Account %28Sales%29 Layout.layout-meta.xml
@@ -47,7 +47,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>CNPJ_CPF__c</field>
+                <field>CNPJ__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
