--- a/force-app/main/default/layouts/Account-Layout Cliente PJ.layout-meta.xml
+++ b/force-app/main/default/layouts/Account-Layout Cliente PJ.layout-meta.xml
@@ -21,7 +21,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>CNPJ_CPF__c</field>
+                <field>CNPJ__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
